# wa-leg-api

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
docs/: QuickStart.md  WhatsNew.md  apidocs.rst  conf.py  exceptions.rst  index.rst  lowlevelapis.rst  requirements.txt  userapis.rst
tests/: test_amendment.py  test_committee.py  test_committeeaction.py  test_committeemeeting.py  test_errors.py  test_imports.py  test_legislation.py  test_legislativedocument.py  test_rcwciteaffected.py  test_sessionlaw.py  test_sponsor.py
wa_leg_api/: Untitled.ipynb  amendment.py  committee.py  committeeaction.py  committeemeeting.py  exceptions.py  legislation.py  legislativedocument.py  make_stubs.py  rcwciteaffected.py  sessionlaw.py  sponsor.py  waleg.py
